# server-manager-discord-bot

./: .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
discord_bot/: .env.example  bot_main.py  pyproject.toml  pytest.ini  run-server.sh
discord_bot/src/: make_access_bat.py  message.py
discord_bot/src/utils/: run_command.py
discord_bot/test/: test_make_access_bat.py
discord_bot/test/utils/: test_run_command.py
