[project]
name = "discord-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.3",
    "dotenv>=0.9.9",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = [
    "test"
]
pythonpath = [
    "src"
]
